[HP-459] Fix spacing issue above state dropdown

--- a/site/assets/css/_sass/components/modal.scss
+++ b/site/assets/css/_sass/components/modal.scss
@@ -246,7 +246,6 @@
 
   .dropdown-menu[data-bs-popper] {
     max-height: 20rem;
-    margin-top: 4.3rem;
     width: 100%;
   }
 }
